# crazybridge

./: package.xml  pid.conf.sim  setup.cfg  setup.py
config/: pid.conf
crazybridge/: crazybridge_node.py  rerun.py  tui.py
launch/: crazybridge.launch.py  crazyoptitrack.launch.py
